@@ -56,6 +56,7 @@
 * Added a work around to pyluxcoretools with PySide2 causing a std::bad_cast
 * Fixed a possible crash when editing a scene
 * Fixed glTF export to work with Python base64.b64decode()
+* Fixed a bug in Disney material causing bright edges
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
